--- a/MazeWeb/Components/Layout/NavMenu.razor
+++ b/MazeWeb/Components/Layout/NavMenu.razor
@@ -22,8 +22,8 @@
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
+            <NavLink class="nav-link" href="/TwistyMaze">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> TwistyMaze
             </NavLink>
         </div>
     </nav>
